Update index.html, weAreCubers.html, wca.html, solve.html, notation.html, getStarted.html, cfop.html, beginnerMethod.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/index.css">
     <script src="assets/js/homePage.js"></script>
     <title>WCA Simulator</title>
+    <link rel="shortcut icon" href="assets/imgs/favicon.png" type="image/png">
 </head>
 <body>
     <main id="main">
